# schneider-cprogrm510A-project1

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  FileWriter.h  Main.cpp  Oscillator.cpp  Oscillator.h  SineOscillator.cpp  SineOscillator.h  SquareOscillator.cpp  SquareOscillator.h  SynthFileWriter.cpp  SynthFileWriter.h  Synthesizer.cpp  Synthesizer.h  TestFileWriter.cpp  TestFileWriter.h  Tests.cpp  WavFileManager.cpp  WavFileManager.h  WavHeader.h
tests/: CMakeLists.txt  RunTests.cpp  Tests.cpp
